jinfo testcase